--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			  
 		window.$docsify = {
 			alias: {
-				'/docs/_sidebar.md': '/_sidebar.md'
+				'/.*/_sidebar.md': '/_sidebar.md'
 			},
 			auto2top: true,
 			basePath: '/aquila-doc.github.io/',
